# docker-web-app-template

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile
backend/django/: pyproject.toml
backend/django/project/app/: asgi.py  settings.py  urls.py
backend/django/project/blog/: admin.py  models.py  serializers.py  views.py
backend/django/project/blog/migrations/: 0001_initial.py  0002_remove_blogpost_meta_blogpost_test.py
backend/fastapi/: alembic.ini  main.py  pyproject.toml
backend/fastapi/migrations/versions/: efd4697173ff_added_initial_tables.py
backend/fastapi/src/db/: database.py
frontend/: Dockerfile
frontend/vue/: package.json
